# other

csv_to_json/: README.md  csv_to_json.py  csvfile.csv  jsonfile.json
csv_to_json/merge/tests/: test_merge.py
csv_to_json/tests/: test_csv_to_json.py
json_to_csv/merge/: README.md  create_csv.py  csvfile.csv  jsonfile_prd.json  pyproject.toml
json_to_csv/simple/: README.md  csvfile.csv  json_to_csv.py  pyproject.toml
json_to_csv/simple_jq/: README.md  jsonfile.json
