[tool.poetry]
name = "csv_to_json"
version = "0.1.0"
description = ""
authors = ["yamamoto-shuhei-valu-pa <yamamoto.shuhei@valuence.inc>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
